# git-job

./: .gitignore
job_tracker_v1/: README.md  cli.py  requirements.txt
job_tracker_v1/config/: searches.yaml  settings.yaml
job_tracker_v1/models/: application.py  database.py  job.py
job_tracker_v1/parsers/: experience.py  qualifications.py  salary.py  skills.py
job_tracker_v1/scrapers/: base.py  greenhouse.py  indeed.py
job_tracker_v1/services/: application_service.py  job_service.py  parser_service.py  scraper_service.py
job_tracker_v1/utils/: config.py  dedup.py  rate_limit.py  text_cleaning.py
job_tracker_v2/: .env.example  TESTING_PLAN.md  job_search_system_guide.md  pyproject.toml  requirements.txt
job_tracker_v2/config/: __init__.py  companies_seed.json  settings.py
job_tracker_v2/data/: job_search.db
job_tracker_v2/database/: __init__.py  connection.py  schema.sql
job_tracker_v2/models/: __init__.py  company.py  posting.py  skill.py
job_tracker_v2/scrapers/: __init__.py  base.py  greenhouse.py  lever.py  scraper_service.py
job_tracker_v2/scripts/: seed_companies.py  test_greenhouse_slugs.py  test_lever_slugs.py  test_scrape.py
job_tracker_v2/tests/: conftest.py  test_phase1_foundation.py
