[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "job-search-system"
version = "0.1.0"
description = "Personal job search and analytics tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "anthropic>=0.40.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "altair>=5.0",
    "apscheduler>=3.10.0",
    "tenacity>=8.2.0",
    "structlog>=23.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.1.0",
]

[project.scripts]
job-search = "scripts.run_pipeline:main"
seed-companies = "scripts.seed_companies:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "live: marks tests that make real API calls",
    "integration: marks integration tests",
    "slow: marks slow tests",
]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.git
    | \.venv
    | data
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]
exclude = [
    ".git",
    ".venv",
    "data",
]

[tool.ruff.isort]
known-first-party = ["config", "database", "models", "scrapers", "llm", "processing", "gui"]
